Reorganize and build together

--- a/libverona/CMakeLists.txt
+++ b/libverona/CMakeLists.txt
@@ -12,4 +12,4 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(Threads REQUIRED)
 add_library(verona STATIC verona.cc)
 target_link_libraries(verona verona_rt)
-target_compile_options(verona PRIVATE -fpie)
+install(TARGETS verona DESTINATION .)
