--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies]
+cmake = "0.1.31"
+
 [dependencies]
